test/fail_compilation/fail78.d
auto yd = ft * 3;
auto ft = inch * 12;

